[workspace]
resolver = "2"
members = ["bin/*", "crates/*"]

[workspace.dependencies]
# Workspace
hana-client = { path = "bin/client", version = "0.1.0", default-features = false }
hana-celestia = { path = "crates/celestia", version = "0.1.0", default-features = false }
hana-proofs = { path = "crates/proofs", version = "0.1.0", default-features = false}
hana-blobstream = { path = "crates/blobstream", version = "0.1.0", default-features = false}
hana-oracle = { path = "crates/oracle", version = "0.1.0", default-features = false }

# Kona
# We use git dependencies instead of version dependencies because Kona is moving very fast right now
# but publish infrequently (last was 2 weeks ago). We want to make sure to use the latest code
# while we're still figuring out how to integrate with it.
# Replace these version-based dependencies
kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-std-fpvm = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-std-fpvm-proc = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }
kona-rpc = { git = "https://github.com/op-rs/kona", tag = "kona-client/v0.1.0-beta.13", default-features = false }

# Alloy
alloy-rlp = { version = "^0.3.11", default-features = false }
alloy-trie = { version = "^0.7.9", default-features = false }
alloy-eips = { version = "=0.12.0", default-features = false }
alloy-serde = { version = "=0.12.0", default-features = false }
alloy-provider = { version = "=0.12.0", default-features = false }
alloy-consensus = { version = "=0.12.0", default-features = false }
alloy-transport = { version = "=0.12.0", default-features = false }
alloy-rpc-types = { version = "=0.12.0", default-features = false }
alloy-rpc-types-eth = { version = "=0.12.0", default-features = false }
alloy-rpc-client = { version = "=0.12.0", default-features = false }
alloy-primitives = { version = "^0.8.21", default-features = false }
alloy-node-bindings = { version = "=0.12.0", default-features = false }
alloy-transport-http = { version = "=0.12.0", default-features = false }
alloy-rpc-types-engine = { version = "=0.12.0", default-features = false }
alloy-rpc-types-beacon = { version = "=0.12.0", default-features = false }
alloy-contract = { version = "^0.12.0", default-features = false }
alloy-sol-types = { version = "^0.8.21", default-features = false }

# OP Alloy
op-alloy-network = { version = "0.11.0", default-features = false }
op-alloy-consensus = { version = "0.11.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.11.0", default-features = false }

# General
lru = "0.12.5"
spin = "0.9.8"
rand = "0.8.5"
clap = "4.5.24"
tokio = "1.42.0"
async-channel = "2.3.1"
cfg-if = "1.0.0"
reqwest = "0.12.12"
async-trait = "0.1.85"
linked_list_allocator = "0.10.5"
bytes = "1.9.0"
hashbrown = "0.15.2"

# General
sha2 = { version = "0.10.8", default-features = false }
c-kzg = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
thiserror = { version = "2.0.9", default-features = false }
rust-kzg-bn254 = { version = "0.2.1", default-features = false }

# Tracing
tracing-loki = "0.2.5"
tracing-subscriber = "0.3.19"
tracing = { version = "0.1.41", default-features = false }

# Testing
pprof = "0.14.0"
proptest = "1.6.0"
criterion = "0.5.1"

# Serialization
rkyv = "0.8.9"
serde = { version = "1.0.217", default-features = false }
serde_json = { version = "1.0.135", default-features = false }
bincode = "1.3"
prost = "0.13.3"

# Ethereum
unsigned-varint = "0.8.0"
revm = { version = "16.0.0", default-features = false }

# Celestia
celestia-types = {git = "https://github.com/Ferret-san/lumina", rev = "25ae7d6" }
celestia-rpc = {git = "https://github.com/Ferret-san/lumina", rev = "25ae7d6" }
celestia-proto = {git = "https://github.com/Ferret-san/lumina", rev = "25ae7d6" }

# Sov SDK (temporary until PFB parsing is moved to Lumina)
sov-celestia-adapter = {git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "2cc0656" }

# K/V database
rocksdb = { version = "0.22.0", default-features = false }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
