[package]
name = "hana-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
kona-preimage.workspace = true
kona-driver.workspace = true
kona-proof.workspace = true
kona-derive.workspace = true
kona-genesis.workspace = true
kona-rpc.workspace = true
kona-protocol.workspace = true

hana-celestia.workspace = true
hana-blobstream.workspace = true

alloy-primitives.workspace = true

spin.workspace = true

serde.workspace = true
bincode.workspace = true

# Celestia
celestia-types.workspace = true

tracing.workspace = true

async-trait.workspace = true